# intellichain

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.MD
docs/: BACKEND.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/disruptions/: page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/components/dashboard/: recent-disruptions.tsx  risk-chart.tsx  stats-card.tsx
frontend/src/components/graph/: impact-graph.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/map/: amcharts-map.tsx  supply-chain-map.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  celebration.tsx  select.tsx  skeleton.tsx  slider.tsx
frontend/src/hooks/: use-sse.ts
frontend/src/lib/: types.ts  utils.ts
frontend/src/lib/api/: client.ts  disruptions.ts  (+2 more)
frontend/src/providers/: query-provider.tsx
scripts/: run_demo.py  run_workers.py  seed_graph.py
src/: config.py
src/api/: deps.py  main.py
src/api/routes/: disruptions.py  graph.py  stream.py  workflow.py
src/events/: generators.py  redis_client.py  streams.py
src/graph/: client.py  queries.py  schema.py
src/llm/: client.py  prompts.py
src/models/: events.py  graph.py  mitigations.py
src/observability/: emitter.py
src/workers/: enrichment.py  orchestrator.py  router.py
src/workflow/: graph.py  nodes.py  prompts.py  state.py
(+5 files in other folders)
