[project]
name = "intellichain"
version = "0.1.0"
description = "Supply chain risk intelligence system"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "neo4j>=5.0.0",
    "redis>=5.0.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
